lab2/python/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python
  labels:
    app: python
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
      - name: python
        image: python-helloworld
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
