lab2/python/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python
spec:
  selector:
    app: python
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
