lab2/python/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /python
        pathType: Prefix
        backend:
          service:
            name: python
            port:
              number: 80
